syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package pointpb;

service PointAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message Point {
	string UUID = 1;
	string userUUID = 2;
	int32 Balance = 3;
	google.protobuf.Timestamp createdAt = 4;
	google.protobuf.Timestamp updatedAt = 5;
	google.protobuf.Timestamp deletedAt = 6;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    Point point = 1;
}

message SetRequest {
	Point point = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	Point point = 1;
}

message DeleteRequest {
    string UUID = 1;
}
