syntax = "proto3";

package product;

service ProductServer {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Product {
	string ID = 1;
	string name = 2;
	string price = 3;
	string imageURLs = 4;
}

message GetRequest {
    string ID = 1;
}

message GetResponse {
    Product product = 1;
	string error = 2;
}

message SetRequest {
	Product product = 1;
}

message SetResponse {
	bool success = 1;
	string error = 2;
}

message UpdateRequest {
	Product product = 1;
}

message UpdateResponse {
	bool success = 1;
	string error = 2;
}

message DeleteRequest {
    string ID = 1;
}

message DeleteResponse {
	bool success = 1;
	string error = 2;
}
